# miolingo

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  Makefile  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: units.yaml  version.yaml
miolingo/: asgi.py  urls.py  wsgi.py
miolingo/core/: __init__.py  admin.py  apps.py  factories.py  fields.py  models.py  paginations.py  serializers.py  validators.py  views.py
miolingo/core/data/: fr-es.csv
miolingo/core/management/commands/: importtrans.py
miolingo/core/migrations/: 0001_initial.py
miolingo/core/tests/: test_factories.py  test_views.py
miolingo/core/tests/commands/: test_createadmin.py  test_importtrans.py
miolingo/core/tests/data/: test_duplicate-fr_es.csv  test_error-fr_es.csv  test_succeed-fr_es.csv
miolingo/settings/: base.py  dev.py  local.py.dist  prod.py  test.py
requirements/: dev.txt  prod.txt  test.txt
